# rusty-pixel

./: .dockerignore  .env.exemple  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml  test.yml
bruno/: .bru  bruno.json  generate.bru  liste pixel.bru  pixel detail.bru  pixel.bru
bruno/environments/: local.bru
src/: db.rs  handler.rs  main.rs  models.rs
