[package]
name = "rusty-pixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
base64 = "0.21.7"
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }